[package]
name = "blk"
version = "2.2.0"
edition = "2021"

[dependencies]
zip = { version = "2.2", default-features = false, features = ["deflate", "zstd"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
crossterm = "0.27"
ratatui = "0.26"
glob = "0.3"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"